# overread

./: .releaserc  CHANGELOG.md  README.md  aws.json  aws.py  cesspool_aws.py  k8s.json  overread_aws.py  overread_k8s.py  pyproject.toml  requirements.txt  setup.py  ui.py
.github/workflows/: release.yaml
cesspool/: __main__.py  cli.py  execution.py  input.py
overread/: __main__.py  cli.py  default_render.py  execution.py  get.py  graph.py  model.py  modules.py  parse.py  render.py  service.py  simple_render.py  ui.tcss
overread/builtin_modules/: aws.json  k8s.json  overread_aws.py  overread_k8s.py
tests/: test_base.py  test_graph.py  test_parse.py
